[[bin]]
name = "fprompt"
path = "src/pl.rs"

[package]
name = "fprompt"
description = "fprompt"
version = "0.0.2"
authors = [ "shosatojp <me@shosato.jp>" ]
edition = "2018"
repository = "https://github.com/shosatojp/powerline-shell"
license = "MIT"

[dependencies]
git2 = "0.13.10"
whoami = "0.9.0"
clap = "2.33.3"

[profile.dev]
opt-level = 3
lto = true
panic = "abort"
debug = false
codegen-units = 1
link-args = "-static"

[build]
jobs = 16
