[[bin]]
name = "fprompt"
path = "src/pl.rs"

[package]
name = "fprompt"
description = "fprompt"
version = "0.0.9"
authors = [ "shosatojp <me@shosato.jp>" ]
edition = "2018"
repository = "https://github.com/shosatojp/powerline-shell"
license = "MIT"

[dependencies]
git2 = "0.13.10"
clap = "2.33.3"
chrono = "0.4.15"
unicode-width = "0.1.8"

[profile.dev]
opt-level = 3
lto = true
panic = "abort"
debug = false
codegen-units = 1
link-args = "-static"

[build]
jobs = 16
