[[bin]]
name = "fprompt"
path = "src/pl.rs"

[package]
name = "fprompt"
description = "fprompt"
version = "1.0.0"
authors = [ "shosatojp <me@shosato.jp>" ]
edition = "2018"
repository = "https://github.com/shosatojp/powerline-shell"
license = "MIT"

[dependencies]
git2 = "0.13.10"
clap = "2.33.3"
chrono = "^0.4.19"
unicode-width = "0.1.8"
serde = { version = "^1.0.101", features = ["derive"] }
serde_yaml = "^0.8"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
# debug = true
codegen-units = 1
